Move sources below the map

--- a/index.html
+++ b/index.html
@@ -152,9 +152,7 @@ Neighbourhoods that do not experience actual upgrading in both dimensions, indep
                   <!-- BEGIN FIRST VISUALISATION -->
 
                   <div id="trend-karte" class="invisible row">
-                    <div class="col-xs-12">
-                      <p>Sources: Amt für Statistik Landeshauptstadt München, ImmobilienScout 24</p>
-                    </div>
+                    
                     <div class="col-xs-12">
                       <!-- Visualisation (map) is inserted here. -->
                       <div id='trendmap' class="map"></div>
@@ -197,29 +195,12 @@ Neighbourhoods that do not experience actual upgrading in both dimensions, indep
                          	</div>
                         </div>
                       </div>
-                      <!--div class="legend-ext">
-                      	 <div class="colours">
-                            <!--div>
-                                <a href="#" class="upsd upwohn"></a>                               
-                            </div>
-                            <div>
-                                <a href="#" class="midsd midwohn"></a>                                
-                            </div>
-                            <div>
-                                <a href="#" class="downsd downwohn"></a>
-                            </div-->
-                            <div>
-                                <a href="#" class="notsd notwohn"></a>
-                            </div>
-                         </div>
-                         <div class="x-axis-ext">
-                          	<!--p class="small"> No Upgrading </p-->
-                          	<!--p> No Upgrading </p-->
-                         </div>
-                     	</div-->
+                      <div>
+                        <p class="sources">Sources: Amt für Statistik Landeshauptstadt München, ImmobilienScout 24</p>
+                      </div>
                     </div>
                   </div>
-
+                  
                   <!-- BEGIN SECOND VISUALISATION -->
 
                   <div id="trend-matrix" class="invisible">
