Remove other Sources

--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@ Neighbourhoods that do not experience actual upgrading in both dimensions, indep
                   <!-- BEGIN SECOND VISUALISATION -->
 
                   <div id="trend-matrix" class="invisible">
-                    <div class="col-xs-12 clearfix">
+                    <!--div class="col-xs-12 clearfix">
                       <p>Sources: Amt für Statistik Landeshauptstadt München, ImmobilienScout 24</p>
-                    </div>
+                    </div-->
                     <div class="col-xs-12">
                       <!-- Drop down menu, populated with the city districts -->
                       <select class="matrix-filter"></select>
