Update Info, rename Typology to Development

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <meta name="viewport" content="width=device-width initial-scale=1">
     <!-- All the styles  -->
     <link rel="stylesheet" href="_/css/screen.css">
-    <link rel="shortcut icon" type="image/x-icon" href="_/img/favicon.ico" />
 
     <!-- Basic script libraries, rest in footer  -->
     <script type='text/javascript' src='_/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js'></script>
@@ -59,7 +58,7 @@
                   <div class="btn-group vis-navigation">
                     <span type="button" class="btn btn-default"><a id="introLink" href="#intro">Info</a></span>
                     <span type="button" class="btn btn-default active"><a id="trendMapLink" href="#trend-karte">Map</a></span>
-                    <span type="button" class="btn btn-default"><a id="trendMatrixLink" href="#trend-matrix">Typology</a></span>
+                    <span type="button" class="btn btn-default"><a id="trendMatrixLink" href="#trend-matrix">Development</a></span>
                     <span type="button" class="btn btn-default"><a id="wanderungLink" href="#wanderung">Initial Status</a></span>
                   </div>
 
@@ -73,15 +72,14 @@
                         <div id="desc-container">
                           <p> There is no comprehensive approach for measuring gentrification tendencies
                             in different neighbourhoods spread over a city, especially in the context of
-                            Germany. This work develops a framework which quantifies change in the
-                            relevant dimensions and sets up a gentrification typology for clearly communicating 
-                            the results of the analysis. It is demonstrated here for <strong>Munich</strong> and the <strong>period between 2008 and 2012</strong>.
+                            Germany. This work develops a framework that quantifies change in the
+                            relevant dimensions and sets up a gentrification typology. It is demonstrated here for <strong>Munich</strong> and the development in the <strong>period between 2008 and 2012</strong>.
                           </p>
                           <p>
                             The socio-demographic dimension represents change in the social status of
-                            the local population. The residential-economic dimension reflects change in type and affordability
+                            the local population, the residential-economic dimension reflects change in type and affordability
                             of the local housing supply that is offered on the website of ImmobilienScout24. 
-                            Emphasised by revisiting the original definition by Glass, they represent the driving forces behind gentrification. The proposed gentrification typology assigns each neighbourhood one of the following types:
+                            They represent the driving forces behind gentrification. The proposed gentrification typology assigns each neighbourhood one of the following types:
                           </p>
                           <ol>
                             <li>  <div class="type1"> <strong> Above-average gentrification area: </strong> </div>
@@ -101,9 +99,9 @@ Neighbourhoods that do not experience actual upgrading in both dimensions, indep
                             </li>
                           </ol>
                           <p>
-                            The legend on the right side has a horizontal direction that indicates development in the socio-demographic
-                            dimension and a vertical one that indicates development in the residential-economic dimension. Strong gentrification tendencies are indicated by approaching the top-right corner, while the category in the bottom-left corner represents neighbourhoods that exhibit no signs of gentrification. For more details on the
-                            applied methodology and algorithms that result in the two indices for each neighbourhood, have a look at the <a href="http://www.schnuko.rlvtn.de/gentrimap/thesis.pdf" target="blank">thesis</a>.
+                            The legend on the right side has a horizontal direction that indicates the development in the socio-demographic
+                            dimension and a vertical one that indicates the development in the residential-economic dimension. Strong gentrification tendencies are indicated by approaching the top-right corner, while the category in the bottom-left corner represents neighbourhoods that exhibit no signs of gentrification. For more details on the
+                            difference between actual and relational upgrading and the applied algorithms that result in the two indices for each neighbourhood, have a look at the <a href="http://www.schnuko.rlvtn.de/gentrimap/thesis.pdf" target="blank">thesis</a>.
                           </p>
                         </div>
                       </div>
