Clear css files

--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@ Neighbourhoods that do not experience actual upgrading in both dimensions, indep
                           </ol>
                           <p>
                             The legend on the right side has a horizontal direction that indicates the development in the socio-demographic
-                            dimension and a vertical one that indicates the development in the residential-economic dimension. Strong gentrification tendencies are indicated by approaching the top-right corner, while the category in the bottom-left corner represents neighbourhoods that exhibit no signs of gentrification. For more details on the
-                            difference between actual and relational upgrading and the applied algorithms that result in the two indices for each neighbourhood, have a look at the <a href="http://www.schnuko.rlvtn.de/gentrimap/thesis.pdf" target="blank">thesis</a>.
+                            dimension and a vertical one that indicates the development in the residential-economic dimension. Strong gentrification tendencies are indicated by approaching the top-right corner, while the category in the bottom-left corner represents neighbourhoods that exhibit no signs of gentrification. Hovering the different categories in the legend highlights the respective neighbourhoods in the map and the scatter plots. 
+                          </p> 
+                          <p>
+                            For more details on the difference between actual and relational upgrading and the applied algorithms that result in the two indices for each neighbourhood, have a look at the <a href="http://www.schnuko.rlvtn.de/gentrimap/thesis.pdf" target="blank">thesis</a>.
                           </p>
                         </div>
                       </div>
