Introduce require.js modules, clean

--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
     <!-- Look nice on mobile -->
     <meta name="viewport" content="width=device-width initial-scale=1">
 
-    <!-- Basic script libraries, rest in footer  -->
-    <script type='text/javascript' src='_/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js'></script>
-    <script type='text/javascript' src='_/js/vendor/jquery-1.9.1.min.js'></script>
-
     <!-- All the styles  -->
     <link rel="stylesheet" href="_/css/screen.css">
  
@@ -266,16 +262,7 @@
         </div> <!--#innerwrap-->
       </div> <!--#outerwrap-->
   
-    <!-- All the scripts. Program logic is in gentrimap.js. This could be done better with angular.js or similar  -->
-    <script type='text/javascript' src='_/js/vendor/bootstrap.min.js'></script>
-    <script type='text/javascript' src='_/js/vendor/underscore.min.js'></script>
-    <script type='text/javascript' src='_/js/vendor/d3.v3.min.js'></script>
-    <script type='text/javascript' src='_/js/vendor/d3.tooltip.js'></script>
-    <script type='text/javascript' src='_/js/vendor/topojson.v1.min.js'></script>
-    <script type='text/javascript' src='_/js/vendor/leaflet.js'></script>
-    <script type='text/javascript' src='_/js/vendor/queue.min.js'></script>
-    <script type='text/javascript' src='_/js/vendor/tinytim.min.js'></script>
-    <script type='text/javascript' src='_/js/gentrimap.js'></script>
+    <script type="text/javascript" src="_/js/vendor/require.js" data-main="_/js/main.js"></script>
      
   </body>
 </html>
